2000-11-14  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Add prj hierarchy needed to build gnatdist.

2000-10-20  Pascal Obry  <obry@gnat.com>

	* configure, configure.in: add support for platform specific
	Garlic.Thin unit.
	
2000-09-21  Laurent Pautet  <pautet@arlequin>

	* MANIFEST: Add the missing gnat files needed to deal with source
	file names. Add new garlic DSM storage files.

2000-09-08  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST: Move storage supports like DFS into the Storages
 	hierarchy in order to have a model similar to the Protocoles one.

2000-09-07  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST: Replace s-shamem with s-shasto.

2000-09-06  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST: Add fname-uf.ads and fname-uf.adb.
	
2000-05-26  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST: Add types.adb.

	* Makefile.am, Makefile.in: Remove RCS keyword.

2000-05-24  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST, configure.in: Add examples MultiSto and MultiPro.

	* NEWS: Add info on new features (passive partitions, multi
	protocols, multi storage).

	* Makefile.in: Regenerate incorrect file.

2000-05-12  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Let the user choose the default optimization he wants
	for gnatdist, the default being no optimization at all.
	Fix bogus help strings.
	Check for adagcc as well (in addition to gnatgcc and gcc) as this
	is a common name for the GNAT compiler.
	Add support for FreeBSD instead of barfing with an error.

2000-05-11  Samuel Tardieu  <sam@inf.enst.fr>

	* README (Introduction): Add a special note to indicate that the
	machine name should never be associated to address 127.0.0.1;
	this is unfortunately the case on some Linux distributions
	(see 7703-007).

2000-04-21  Laurent Pautet  <pautet@inf.enst.fr>

	* MANIFEST: Add new files from Garlic concerning data storages for 
	shared passive units and passive partitions.

	* configure.in, configure, Makefile.in: Define flag