@@ -29,7 +29,7 @@ AC_CHECK_PROG(GNATMAKE, gnatmake, gnatmake)
 #
 AC_ARG_ENABLE(debug,
 [  --enable-debug          Turn on debugging options],
-[GNATFLAGS="-g -O2 -Wall -gnatawe"
+[GNATFLAGS="-g -O2 -gnatawe"
  LINKTEST="linktest"],
 [GNATFLAGS="-O2 -gnatpn"
  LINKTEST=""])
